0.3.1

- Removing the reports from the sub modules and making them just return their reports

0.3.0

- Making modules actually be modules

0.2.0

- Finally fixing the naming scheme
- Splitting configuration into its own class

0.1.0

- Moving call to endpoint for path param support
- Adding top level Contract to bind endpoints together
- Moved extra verbs check out of typo to its own module

0.0.5

- Adding support for delete, put, head, options, copy, mkcol, move, propfind, proppatch, trace, lock, unlock, and patch verbs
- Fixing test output to be more readable

0.0.4

- Moving test_helper from tester level to endpoint level in preparation for moving to full definition

0.0.3

- Fixing Problem with 0.0.2

0.0.2

- Moving url from methods to endpoints