@@ -2,16 +2,20 @@
 
 module ApiTester
   module ExtraVerbs
-    def self.go endpoint
+    def self.go contract
       reports = []
-      extras = ApiTester::SupportedVerbs.all - endpoint.verbs
-      extras.each do |verb|
-        verb_case = BoundaryCase.new("Verb check with #{verb} for #{endpoint.name}", {}, {})
-        method = ApiTester::ApiMethod.new verb, ApiTester::Response.new, ApiTester::Request.new
-        response = endpoint.call method, verb_case.payload, verb_case.headers
-        test = VerbClass.new response, verb_case.payload, endpoint.not_allowed_response, endpoint.url, verb
-        reports.concat test.check
+
+      contract.endpoints.each do |endpoint|
+        extras = ApiTester::SupportedVerbs.all - endpoint.verbs
+        extras.each do |verb|
+          verb_case = BoundaryCase.new("Verb check with #{verb} for #{endpoint.name}", {}, {})
+          method = ApiTester::ApiMethod.new verb, ApiTester::Response.new, ApiTester::Request.new
+          response = endpoint.call method, verb_case.payload, verb_case.headers
+          test = VerbClass.new response, verb_case.payload, endpoint.not_allowed_response, endpoint.url, verb
+          reports.concat test.check
+        end
       end
+
       reports
     end
 
