@@ -3,6 +3,7 @@ require 'webmock/rspec'
 require 'api-tester/definition/response'
 require 'api-tester/definition/request'
 require 'api-tester/definition/endpoint'
+require 'api-tester/definition/api_contract'
 require 'api-tester/modules/format'
 require 'api-tester/reporter/api_report'
 require 'api-tester/test_helper'
@@ -11,6 +12,7 @@ describe ApiTester::Format do
   let(:url) {"www.example.com"}
   let(:request) { ApiTester::Request.new }
   let(:endpoint) {ApiTester::Endpoint.new "Test", url}
+  let(:contract) {ApiTester::ApiContract.new "Test"}
   let(:expected_code) {400}
   let(:expected_response) {ApiTester::Response.new expected_code}
   let(:expected_body) {'{"numKey": 1, "string_key": "string"}'}
@@ -29,18 +31,19 @@ describe ApiTester::Format do
 
     endpoint.add_method ApiTester::SupportedVerbs::POST, expected_response, request
     endpoint.bad_request_response = expected_response
+    contract.add_endpoint endpoint
 
     stub_request(:post, url).to_return(body: expected_body, status: expected_code)
   end
 
   context 'post request' do
     it 'everything works' do
-      expect(ApiTester::Format.go(endpoint).size).to eq 0
+      expect(ApiTester::Format.go(contract).size).to eq 0
     end
 
     it 'gets a simple string' do
       stub_request(:post, url).to_return(body: 'bad request', status: expected_code)
-      expect(ApiTester::Format.go(endpoint).size).to be >= 1
+      expect(ApiTester::Format.go(contract).size).to be >= 1
     end
   end
 
@@ -58,7 +61,7 @@ describe ApiTester::Format do
       endpoint.test_helper = test_helper_mock.new
       stub_request(:get, "www.test.com/before").to_return(body: '', status: 200)
       stub_request(:get, "www.test.com/after").to_return(body: '', status: 200)
-      expect(ApiTester::Format.go(endpoint).size).to eq 0
+      expect(ApiTester::Format.go(contract).size).to eq 0
     end
 
     it 'should make use of test helper before method' do
