@@ -3,6 +3,7 @@ require 'webmock/rspec'
 require 'api-tester/definition/response'
 require 'api-tester/definition/request'
 require 'api-tester/definition/endpoint'
+require 'api-tester/definition/api_contract'
 require 'api-tester/modules/good_case'
 require 'api-tester/reporter/api_report'
 
@@ -18,6 +19,7 @@ describe ApiTester::GoodCase do
     let(:body) { '{"numKey": 1, "string_key": "string", "object_field": {"inner_field": "string", "other_field": "string"}}' }
     let(:code) { 200 }
     let(:endpoint) {ApiTester::Endpoint.new "Test", url}
+    let(:contract) {ApiTester::ApiContract.new "Test"}
     let(:response) { ApiTester::Response.new code }
     let(:report) {ApiTester::ApiReport.new}
 
@@ -26,44 +28,45 @@ describe ApiTester::GoodCase do
         response.add_field field
       end
       endpoint.add_method ApiTester::SupportedVerbs::GET, response, request
+      contract.add_endpoint endpoint
 
       stub_request(:get, "www.example.com").to_return(body: body, status: code)
     end
 
     context 'status code' do
       it 'can pass compatible status code' do
-        expect(ApiTester::GoodCase.go(endpoint).size).to eq 0
+        expect(ApiTester::GoodCase.go(contract).size).to eq 0
       end
 
       [100, 201, 300, 400, 529].each do | status |
         it "will fail different status code #{status}" do
           response.code = status
-          expect(ApiTester::GoodCase.go(endpoint).size).to be >= 1
+          expect(ApiTester::GoodCase.go(contract).size).to be >= 1
         end
       end
     end
 
     context 'body' do
       it 'passes with correct keys' do
-        expect(ApiTester::GoodCase.go(endpoint).size).to eq 0
+        expect(ApiTester::GoodCase.go(contract).size).to eq 0
       end
 
       it 'fails when a key is missing' do
         response.add_field(ApiTester::Field.new("missingField"))
-        expect(ApiTester::GoodCase.go(endpoint).size).to be >= 1
+        expect(ApiTester::GoodCase.go(contract).size).to be >= 1
       end
 
       context 'empty response' do
         it 'fails when expecting keys which are not there' do
           stub_request(:get, "www.example.com").to_return(body: '[]', status: code)
-          expect(ApiTester::GoodCase.go(endpoint).size).to be >= 1
+          expect(ApiTester::GoodCase.go(contract).size).to be >= 1
         end
 
         it 'passes when expecting an empty body' do
           stub_request(:get, "www.example.com").to_return(body: '[]', status: code)
           response = ApiTester::Response.new 200
           endpoint.methods[0].expected_response = response
-          expect(ApiTester::GoodCase.go(endpoint).size).to eq 0
+          expect(ApiTester::GoodCase.go(contract).size).to eq 0
         end
       end
     end
@@ -82,7 +85,7 @@ describe ApiTester::GoodCase do
         endpoint.test_helper = test_helper_mock.new
         stub_request(:get, "www.test.com/before").to_return(body: '', status: 200)
         stub_request(:get, "www.test.com/after").to_return(body: '', status: 200)
-        expect(ApiTester::GoodCase.go(endpoint).size).to eq 0
+        expect(ApiTester::GoodCase.go(contract).size).to eq 0
       end
 
       it 'should make use of test helper before method' do
@@ -103,6 +106,7 @@ describe ApiTester::GoodCase do
     let(:code) { 200 }
     let(:response) { ApiTester::Response.new code }
     let(:endpoint) {ApiTester::Endpoint.new "Test", url}
+    let(:contract) {ApiTester::ApiContract.new "Test"}
     let(:report) {ApiTester::ApiReport.new}
 
     before :each do
@@ -110,29 +114,30 @@ describe ApiTester::GoodCase do
         response.add_field field
       end
       endpoint.add_method ApiTester::SupportedVerbs::POST, response, request
+      contract.add_endpoint endpoint
       stub_request(:post, url).to_return(body: body, status: code)
     end
 
     context 'status code' do
       it 'can pass compatible status code' do
-        expect(ApiTester::GoodCase.go(endpoint).size).to eq 0
+        expect(ApiTester::GoodCase.go(contract).size).to eq 0
       end
 
       [100, 201, 300, 400, 529].each do | status |
         it "will fail different status code #{status}" do
           response.code = status
-          expect(ApiTester::GoodCase.go(endpoint).size).to be >= 1
+          expect(ApiTester::GoodCase.go(contract).size).to be >= 1
         end
       end
     end
 
     context 'body' do
       it 'passes with correct keys' do
-        expect(ApiTester::GoodCase.go(endpoint).size).to eq 0
+        expect(ApiTester::GoodCase.go(contract).size).to eq 0
       end
 
       it 'increments keys' do
-        ApiTester::GoodCase.go(endpoint)
+        ApiTester::GoodCase.go(contract)
         expect(fields[0].is_seen).to eq(1)
         expect(fields[1].is_seen).to eq(1)
         expect(fields[2].is_seen).to eq(1)
@@ -141,7 +146,7 @@ describe ApiTester::GoodCase do
 
       it 'fails when a key is missing' do
         response.add_field(ApiTester::Field.new("missingField"))
-        expect(ApiTester::GoodCase.go(endpoint).size).to be >= 1
+        expect(ApiTester::GoodCase.go(contract).size).to be >= 1
       end
     end
 
@@ -159,7 +164,7 @@ describe ApiTester::GoodCase do
         endpoint.test_helper = test_helper_mock.new
         stub_request(:get, "www.test.com/before").to_return(body: '', status: 200)
         stub_request(:get, "www.test.com/after").to_return(body: '', status: 200)
-        expect(ApiTester::GoodCase.go(endpoint).size).to eq 0
+        expect(ApiTester::GoodCase.go(contract).size).to eq 0
       end
 
       it 'should make use of test helper before method' do
